--- a/Template/Home/about_us.html
+++ b/Template/Home/about_us.html
@@ -201,9 +201,9 @@
                 <!-- <img src="assets/images/testimonial-profile-1.png" alt=""> -->
               </div>
               <p class="testimonial-text">
-                Mrs. Anjali Narvekar, Director & CTO leads innovation in IT infrastructure, delivering cutting-edge solutions to shape the future of technology.
+                30 Years of experience in the IT Industry
               </p>
-              <p class="testimonial-title">Mrs. Anjali Narvekar <br>Director & Chief Technology Officer</p>
+              <p class="testimonial-title">Mrs. Anjali Narvekar <br>Director, Head of Software</p>
               <div class="review-stars"></div>
             </div>
             <div class="swiper-slide testimonial-items">
@@ -211,9 +211,9 @@
                 <!-- <img src="assets/images/testimonial-profile-2.png" alt=""> -->
               </div>
               <p class="testimonial-text">
-                Mr. Mahesh Narvekar, Strategic Director & Business Development Head  drives growth, leads projects, and builds strong client relationships.
+                20 Years of experience as an Entrepreneur
               </p>
-              <p class="testimonial-title">Mr. Mahesh Narvekar<br>Director & Business Development and Project Head</p>
+              <p class="testimonial-title">Mr. Mahesh Narvekar<br>Director, Head of Business Development and Projects</p>
               <div class="review-stars"></div>
             </div>
             <div class="swiper-slide testimonial-items">
@@ -221,9 +221,9 @@
                 <!-- <img src="assets/images/testimonial-profile-3.png" alt=""> -->
               </div>
               <p class="testimonial-text">
-              Mr. Umesh Narvekar, Director and Diploma Engineer in Hardware & Networking  ensures seamless hardware and networking solutions.
+                20 Years of experience
               </p>
-              <p class="testimonial-title">Mr. Umesh Narvekar<br>Director & Diploma Engineer in Hardware & Networking
+              <p class="testimonial-title">Mr. Umesh Narvekar<br>Director, Head of Hardware and Networking
                 </p>
               <div class="review-stars"></div>
             </div>
@@ -233,9 +233,9 @@
                 <!-- <img src="assets/images/testimonial-profile-1.png" alt=""> -->
               </div>
               <p class="testimonial-text">
-                Mr. Shridhar Belamkar, Senior Software Developer creates innovative software solutions, ensuring high performance and driving technological advancements.
+                Versatile Team with experience in Dot Net, PHP, Django Python, MSSQL, MySQL, Flutter, React , AI/ ML etc., conceptualizing and Developing Software for Prestigious Government and Private Customers.
               </p>
-              <p class="testimonial-title">Mr. Shridhar Belamkar<br>Senior Software Developer</p>
+              <p class="testimonial-title">Full Stack Developers</p>
               <div class="review-stars"></div>
             </div>
             <div class="swiper-slide testimonial-items">
@@ -243,9 +243,9 @@
                 <!-- <img src="assets/images/testimonial-profile-2.png" alt=""> -->
               </div>
               <p class="testimonial-text">
-                Prashant Naik is a skilled Cloud Architect , designing scalable, secure cloud solutions that drive efficiency and innovation. 
+                Dynamic Team donning multiple hats, managing Customer Meetings, Providing Demos, Analysis and Designing Systems with Developers, Migrating Data and Testing Applications to near perfection.
               </p>
-              <p class="testimonial-title">Mr. Prashant Naik<br>Cloud Architect</p>
+              <p class="testimonial-title">Business Analysts and Testers</p>
               <div class="review-stars"></div>
             </div>
             <div class="swiper-slide testimonial-items">
@@ -253,9 +253,9 @@
                 <!-- <img src="assets/images/testimonial-profile-3.png" alt=""> -->
               </div>
               <p class="testimonial-text">
-                Giridhari Yadav is the detail-oriented Chief Accountant  💼📊, ensuring accurate financial management and supporting the company’s growth and stability. 💰🔍
+                Onsite Coordinators Liaisoning with the customers, gathering requirements, helping the customer with UAT, coordinating with the Offsite team, providing trainings, helping in implementation of the projects etc.
               </p>
-              <p class="testimonial-title">Mr. Giridhari Yadav<br>Chief Accountant</p>
+              <p class="testimonial-title">Project Coordinators/ Implementers</p>
               <div class="review-stars"></div>
             </div>
 
@@ -264,9 +264,9 @@
                 <!-- <img src="assets/images/testimonial-profile-1.png" alt=""> -->
               </div>
               <p class="testimonial-text">
-                Imran Shaikh is a creative Software Developer 💻✨, dedicated to building efficient software and delivering high-quality digital solutions to meet the company’s needs. 🌟👨‍💻
+                Engineers adept in technical skills for supply and maintenance of the hardware and networking equipment. They keep up with the latest trend and make the customer setups in par with the industry standards.
               </p>
-              <p class="testimonial-title">Mr. Imran Shaikh<br>Software Developer</p>
+              <p class="testimonial-title">Hardware and Network Engineers</p>
               <div class="review-stars"></div>
             </div>
 
@@ -275,86 +275,19 @@
                 <!-- <img src="assets/images/testimonial-profile-3.png" alt=""> -->
               </div>
               <p class="testimonial-text">
-                Pruthvi Hajare is a skilled Senior Software Developer 💻🚀, leading the development of innovative software solutions and driving technological advancements. 🔧💡
+                Marketing and Sales, HR, Accounts and Administration team provide a strong and stable backbone managing their own portfolios skilfully and efficiently. 
               </p>
-              <p class="testimonial-title">Mr. Pruthvi Hajare<br>Senior Software Developer</p>
+              <p class="testimonial-title">Support Team</p>
               <div class="review-stars"></div>
             </div>
-
             <div class="swiper-slide testimonial-items">
               <div class="testimonial-img tm-img-9">
                 <!-- <img src="assets/images/testimonial-profile-3.png" alt=""> -->
               </div>
               <p class="testimonial-text">
-                Yash Gharat is a Software Tester & Developer at Technowin I.T. Infra Pvt. Ltd., ensuring high-quality software through testing and development.
+                Our Marketing, Sales, HR, Accounts, and Administration teams efficiently manage their portfolios, providing a strong and stable foundation for business growth and success.
               </p>
-              <p class="testimonial-title">Mr. Yash Gharat<br>Software Tester & Software Developer</p>
-              <div class="review-stars"></div>
-            </div>
-
-            <div class="swiper-slide testimonial-items">
-              <div class="testimonial-img tm-img-10">
-                <!-- <img src="assets/images/testimonial-profile-3.png" alt=""> -->
-              </div>
-              <p class="testimonial-text">
-                Vishal Mhalim is a Software Tester, using his analytical skills to deliver high-quality, bug-free software and enhance user experiences.
-              </p>
-              <p class="testimonial-title">Mr. Vishal Mhalim<br>Software Tester</p>
-              <div class="review-stars"></div>
-            </div>
-
-            <div class="swiper-slide testimonial-items">
-              <div class="testimonial-img tm-img-11">
-                <!-- <img src="assets/images/testimonial-profile-3.png" alt=""> -->
-              </div>
-              <p class="testimonial-text">
-                Rishikesh Raorane is a Software Tester , ensuring quality software by identifying bugs and optimizing performance.
-              </p>
-              <p class="testimonial-title">Mr. Rishikesh Raorane<br>Software Tester</p>
-              <div class="review-stars"></div>
-            </div>
-
-            <div class="swiper-slide testimonial-items">
-              <div class="testimonial-img tm-img-12">
-                <!-- <img src="assets/images/testimonial-profile-2.png" alt=""> -->
-              </div>
-              <p class="testimonial-text">
-                Riya Patil is a coding expert and tech innovator, crafting cutting-edge software solutions with passion and skill. 
-              </p>
-              <p class="testimonial-title">Ms. Riya Patil<br>Senior Software Developer</p>
-              <div class="review-stars"></div>
-            </div>
-
-            <div class="swiper-slide testimonial-items">
-              <div class="testimonial-img tm-img-13">
-                <!-- <img src="assets/images/testimonial-profile-2.png" alt=""> -->
-              </div>
-              <p class="testimonial-text">
-                Chaitanya Shetty, a digital enthusiast 🚀, is diving into marketing with creativity and passion, aiming to make an impact in the digital space! 🎯🔥
-              </p>
-              <p class="testimonial-title">Ms. Chaitanya Shetty<br>Trainee Digital Marketing</p>
-              <div class="review-stars"></div>
-            </div>
-
-            <div class="swiper-slide testimonial-items">
-              <div class="testimonial-img tm-img-14">
-                <!-- <img src="assets/images/testimonial-profile-3.png" alt=""> -->
-              </div>
-              <p class="testimonial-text">
-                Palavee Chavan, a tech innovator 🎯, builds smart software solutions with a problem-solving mindset 🧩 and love for coding 💡, driving digital excellence! 🚀⚡
-              </p>
-              <p class="testimonial-title">Ms. Palavee Chavan<br>Software Developer</p>
-              <div class="review-stars"></div>
-            </div>
-
-            <div class="swiper-slide testimonial-items">
-              <div class="testimonial-img tm-img-15">
-                <!-- <img src="assets/images/testimonial-profile-3.png" alt=""> -->
-              </div>
-              <p class="testimonial-text">
-                Manasi Kamble, a coding enthusiast 💻, specializes in creating innovative solutions with precision 🧐 and a passion for transforming challenges into tech breakthroughs! 🌟💡
-              </p>
-              <p class="testimonial-title">Ms. Manasi Kamble<br>Software Developer</p>
+              <p class="testimonial-title">Digital Marketing Associate</p>
               <div class="review-stars"></div>
             </div>
           </div>
