--- a/Template/Home/service.html
+++ b/Template/Home/service.html
@@ -58,137 +58,130 @@
 
     <section class="cards-section">
       <div class="container">
-        <div class="row">
-          <!-- Row 2 -->
-          <div class="col-md-6">
-            <div class="card card-image">
-              <img
-                src="{% static 'images/cloud.gif' %}"
-                alt="Card Image 2"
-                class="card-img"
-              />
+        <!-- Cloud Computing Section -->
+        <div class="service-1">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="card card-image">
+                <img src="{% static 'images/cloud.gif' %}" alt="Cloud Computing" class="card-img" />
+              </div>
             </div>
-          </div>
-          <div class="col-md-6">
-            <div class="card card-text">
-              <h3 class="card-title"><u>Cloud Computing</u></h3>
-              <p class="card-description">
-                1. Accounting Software (Mondial) for Maharashtra Village Social Transformation and Foundation (MVSTF).<br>
-                2. Tally Software for Sir Vithaldas Thackersey College of Home Science (SVT).<br>
-                3. College ERP Software for Sir Vithaldas Thackersey College of Home Science (SVT).<br>
-                4. HRMS Software for Panvel Municipal Corporation (PMC).<br>
-                5. Integration of the Nakashe (LKN) Applications.<br>
-                6. Maintenance and Support of TISS SVE ERP, Admission Portal and Website.<br>
-                7. Other Applications developed and implemented by Technowin.<br>
-                
-              </p>
-            </div>
-          </div>
-        </div>
-        <br />
-        <br />
-        <div class="row">
-          <!-- Row 4 -->
-          <div class="col-md-6">
-            <div class="card card-text">
-              <h3 class="card-title"><u>Supply of Manpower</u></h3>
-              <p class="card-description">
-                1 . Manpower Outsourcing Services <br>Hindustan Petroleum Corporation Limited (HPCL) <br>2. Providing Manpower for Data Entry Operation for (CIDCO) 
-                <br>City and Industrial Development  Corporation of Maharashtra Limited (CIDCO) <br>3. Providing Outsourced Manpower for Official Work <br>3. Providing Outsourced Manpower for Official Work 
-                <br>4. Manpower Outsourcing Services <br>Sports Authority of India (SAI) 
-              </p>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="card card-image">
-              <img
-                src="{% static 'images/manpower.gif' %}"
-                alt="Card Image 4"
-                class="card-img"
-              />
-            </div>
-          </div>
-        </div>
-        <br />
-        <br />
-        <div class="row">
-          <!-- Row 5 -->
-          <div class="col-md-6">
-            <div class="card card-image">
-              <img
-                src="{% static 'images/hardware_icon.gif' %}"
-                alt="Card Image 4"
-                class="card-img"
-              />
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="card card-text">
-              <h3 class="card-title"><u>Hardware Supply</u></h3>
-              <p class="card-description">
-                1. Supply of 243 PC's in Customer care Department, BEST.Brihanmumbai Electric Supply & Transport (BEST) <br><br>
-                2. Supply of desktop computers & MFPs  in Sewerage Operations Department, MCGM.<br><br>
-                Municipal corporation of Greater Mumbai (MCGM) Sewerage Operations Department 
-              </p>
-            </div>
-          </div>
-        </div>
-        <br />
-        <div class="row">
-          <!-- Row 5 -->
-          <div class="col-md-6">
-            <div class="card card-text">
-              <h3 class="card-title"><u>Digitalization of Documents</u></h3>
-              <p class="card-description">
-                1. Work of data entry operations and others <br>Municipal Corporation of Greater Mumbai (MCGM) 
-              <br>2. Appointing Operators for Data Entry & Scanning <br>Maharashtra Housing and Area Development Authority (MHADA) <br>
-              3. Data entry and Scanning of Documents <br>Arceus Infotech Pvt. Ltd <br>4. Data Entry & Scanning of Documents & Files related to allotments of house under Rajiv Gandhi Housing Scheme 
-              <br>Maharashtra Housing and Area Development Mumbai (MCGM) <br>5. Supply of Manpower for  MCGM Octroi Project <br>Vidharbha Infotech Pvt. Ltd 
-              </p>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="card card-image">
-              <img
-                src="{% static 'images/data_management.gif' %}"
-                alt="Card Image 4"
-                class="card-img"
-              />
-            </div>
-          </div>
-        </div>
-        <br>
-    
-        <div class="row">
-          <!-- Row 5 -->
-          <div class="col-md-6">
-            <div class="card card-image">
-              <img
-                src="{% static 'images/program_management.gif' %}"
-                alt="Card Image 4"
-                class="card-img"
-              />
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="card card-text">
-              <h3 class="card-title"><u>Hardware AMC</u></h3>
-              <p class="card-description">
-                1. Purchase order for Onsite Staff Support for Maintenance of Information Communication Technology systems Operations and Accessories.<br>S.N.D.T Women's College 
-                <br>2. Providing Maintenance services for Computer Hardware System at Octroi Department of MCGM <br>Brihanmumbai Mahanagar Palika (MCGM) 
-                  <br>3. Award for Annual Maintenance Contract of Computer Systems <br>Risk Management Centre for Customs Directorate General of Analytics Risk Management 
-                <br>4. AMC for Computers <br>Brihanmumbai Electrical supply & Transport Undertaking. <br>5. Comprehensive Annual Maintenance Contract For Desktop , Servers and other computer peripherals 
-                <br> The Municipal CO-OP  Bank Ltd Mumbai <br>6. Contract of  Desktop Computers ,Printers and other allied IT peripherals available in various units 
-                  <br> Department of Post Government of India <br>7. Contract for AMC of Computers and its peripherals for the period <br>Commissioner of Customs (preventive) 
-                <br>8. Contract of Computers, Printers , Scanners , LAN Switches with Local Area Networking etc.<br> Nehru Science Centre Museums (NSCM) 
-                <br> 9. Non - Comprehensive Annual Maintenance Contract of IT Equipment for PIB <br>Press Information Centre 
+            <div class="col-md-6">
+              <div class="card card-text">
+                <h3 class="card-title"><u>Cloud Computing</u></h3>
+                <p class="card-description">
+                  1. Accounting Software (Mondial) for Maharashtra Village Social Transformation and Foundation (MVSTF).<br>
+                  2. Tally Software for Sir Vithaldas Thackersey College of Home Science (SVT).<br>
+                  3. College ERP Software for Sir Vithaldas Thackersey College of Home Science (SVT).<br>
+                  4. HRMS Software for Panvel Municipal Corporation (PMC).<br>
+                  5. Integration of the Nakashe (LKN) Applications.<br>
+                  6. Maintenance and Support of TISS SVE ERP, Admission Portal, and Website.<br>
+                  7. Other Applications developed and implemented by Technowin.
                 </p>
+              </div>
             </div>
           </div>
-         
+        </div>
+     
+    
+        <br /><br />
+    
+        <!-- Supply of Manpower Section -->
+        <div class="service-2">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="card card-text">
+                <h3 class="card-title"><u>Supply of Manpower</u></h3>
+                <p class="card-description">
+                  1. Manpower Outsourcing Services - Hindustan Petroleum Corporation Limited (HPCL).<br>
+                  2. Providing Manpower for Data Entry Operation for CIDCO (City and Industrial Development Corporation of Maharashtra Limited).<br>
+                  3. Providing Outsourced Manpower for Official Work - Sports Authority of India (SAI).
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="card card-image">
+                <img src="{% static 'images/manpower.gif' %}" alt="Supply of Manpower" class="card-img" />
+              </div>
+            </div>
+          </div>
+        </div>
+    
+        <br /><br />
+    
+        <!-- Hardware Supply Section -->
+        <div class="service-3">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="card card-image">
+                <img src="{% static 'images/hardware_icon.gif' %}" alt="Hardware Supply" class="card-img" />
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="card card-text">
+                <h3 class="card-title"><u>Hardware Supply</u></h3>
+                <p class="card-description">
+                  1. Supply of 243 PCs in Customer Care Department, BEST (Brihanmumbai Electric Supply & Transport).<br>
+                  2. Supply of desktop computers & MFPs in Sewerage Operations Department, MCGM (Municipal Corporation of Greater Mumbai).
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+    
+        <br />
+    
+        <!-- Digitalization of Documents Section -->
+        <div class="service-4">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="card card-text">
+                <h3 class="card-title"><u>Digitalization of Documents</u></h3>
+                <p class="card-description">
+                  1. Work of data entry operations and others - Municipal Corporation of Greater Mumbai (MCGM).<br>
+                  2. Appointing Operators for Data Entry & Scanning - Maharashtra Housing and Area Development Authority (MHADA).<br>
+                  3. Data entry and Scanning of Documents - Arceus Infotech Pvt. Ltd.<br>
+                  4. Data Entry & Scanning of Documents & Files related to allotments of houses under Rajiv Gandhi Housing Scheme - MCGM.
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="card card-image">
+                <img src="{% static 'images/data_management.gif' %}" alt="Digitalization of Documents" class="card-img" />
+              </div>
+            </div>
+          </div>
+        </div>
+    
+        <br />
+    
+        <!-- Hardware AMC Section -->
+        <div class="service-5">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="card card-image">
+                <img src="{% static 'images/program_management.gif' %}" alt="Hardware AMC" class="card-img" />
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="card card-text">
+                <h3 class="card-title"><u>Hardware AMC</u></h3>
+                <p class="card-description">
+                  1. Purchase order for Onsite Staff Support for Maintenance of Information Communication Technology systems - S.N.D.T Women's College.<br>
+                  2. Providing Maintenance services for Computer Hardware System at Octroi Department of MCGM.<br>
+                  3. Award for Annual Maintenance Contract of Computer Systems - Risk Management Centre for Customs Directorate General of Analytics Risk Management.<br>
+                  4. AMC for Computers - Brihanmumbai Electrical Supply & Transport Undertaking.<br>
+                  5. Comprehensive Annual Maintenance Contract for Desktop, Servers, and other computer peripherals - The Municipal CO-OP Bank Ltd Mumbai.<br>
+                  6. Contract of Desktop Computers, Printers, and other allied IT peripherals available in various units - Department of Post Government of India.
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
+    
+
     <section id="faq-section">
       <h2>Frequently Asked Questions</h2>
       <div class="faq-container">
@@ -229,39 +222,7 @@
         </div>
       </div>
     </section>
-    {% comment %}
-    <section id="pinned-section">
-      <!-- Home -->
-      <a href="{% url 'Home' %}" class="image-link">
-        <img src="{% static 'images/home.gif' %}" alt="Home Image" />
-        <span class="hover-name">Home</span>
-      </a>
-
-      <!-- Contact -->
-      <a href="{% url 'ContactUs' %}" class="image-link">
-        <img src="{% static 'images/contact_us.gif' %}" alt="Contact Image" />
-        <span class="hover-name">Contact</span>
-      </a>
-
-      <!-- About -->
-      <a href="{% url 'AboutUs' %}" class="image-link">
-        <img src="{% static 'images/info.gif' %}" alt="About Image" />
-        <span class="hover-name">About</span>
-      </a>
-
-      <!-- Software -->
-      <a href="{% url 'Software' %}" class="image-link">
-        <img src="{% static 'images/programmer.gif' %}" alt="Software Image" />
-        <span class="hover-name">Software</span>
-      </a>
-
-      <!-- Services -->
-      <a href="{% url 'Services' %}" class="image-link">
-        <img src="{% static 'images/services.gif' %}" alt="Services Image" />
-        <span class="hover-name">Services</span>
-      </a>
-    </section>
-    {% endcomment %}
+    
   </body>
 
   <script>
