--- a/Template/Home/index.html
+++ b/Template/Home/index.html
@@ -472,7 +472,7 @@
             </div>
             <!-- Client Logo 5 -->
             <div class="client-logo-item">
-                <img src="{% static 'client_logo/Maharashtra_Housing_and_Area_Development_Authority_(emblem).jpg' %}" alt="Client 5" class="client-logo">
+                <img src="{% static 'client_logo/mhada_logo.jpg' %}" alt="Client 5" class="client-logo">
             
             </div>
             <!-- Client Logo 1 -->
@@ -543,7 +543,7 @@
             </div>
             <!-- Client Logo 5 -->
             <div class="client-logo-item">
-                <img src="{% static 'client_logo/Maharashtra_Housing_and_Area_Development_Authority_(emblem).jpg' %}" alt="Client 5" class="client-logo">
+                <img src="{% static 'client_logo/mhada_logo.jpg' %}" alt="Client 5" class="client-logo">
             
             </div>
             <!-- Client Logo 1 -->
@@ -595,6 +595,131 @@
             <div class="client-logo-item">
                 <img src="{% static 'client_logo/cgst.png' %}" alt="Client 5" class="client-logo">
                 
+            </div>
+              <!-- Client Logo 1 -->
+              <div class="client-logo-item">
+                <img src="{% static 'client_logo/navi_mumbai.png' %}" alt="Client 1" class="client-logo">   
+            </div>
+        
+            <!-- Client Logo 3 -->
+            <div class="client-logo-item">
+                <img src="{% static 'client_logo/lkn.png' %}" alt="Client 3" class="client-logo">
+            
+            </div>
+            <!-- Client Logo 4 -->
+            <div class="client-logo-item">
+                <img src="{% static 'client_logo/tata1.png' %}" alt="Client 4" class="client-logo">
+                
+            </div>
+            <!-- Client Logo 5 -->
+            <div class="client-logo-item">
+                <img src="{% static 'client_logo/mhada_logo.jpg' %}" alt="Client 5" class="client-logo">
+            
+            </div>
+            <!-- Client Logo 1 -->
+            <div class="client-logo-item">
+                <img src="{% static 'client_logo/Sports_Authority_of_India_logo.svg.png' %}" alt="Client 1" class="client-logo">
+            
+            </div>
+            <!-- Client Logo 2 -->
+            <div class="client-logo-item">
+                <img src="{% static 'client_logo/img1.png' %}" alt="Client 2" class="client-logo">
+            
+            </div>
+            <!-- Client Logo 3 -->
+            <div class="client-logo-item">
+                <img src="{% static 'client_logo/cidcologo.jpg' %}" alt="Client 3" class="client-logo">
+            
+            </div>
+             <!-- Client Logo 1 -->
+             <div class="client-logo-item">
+                <img src="{% static 'client_logo/navi_mumbai.png' %}" alt="Client 1" class="client-logo">   
+            </div>
+        
+            <!-- Client Logo 3 -->
+            <div class="client-logo-item">
+                <img src="{% static 'client_logo/lkn.png' %}" alt="Client 3" class="client-logo">
+            
+            </div>
+            <!-- Client Logo 4 -->
+            <div class="client-logo-item">
+                <img src="{% static 'client_logo/tata1.png' %}" alt="Client 4" class="client-logo">
+                
+            </div>
+            <!-- Client Logo 5 -->
+            <div class="client-logo-item">
+                <img src="{% static 'client_logo/mhada_logo.jpg' %}" alt="Client 5" class="client-logo">
+            
+            </div>
+            <!-- Client Logo 1 -->
+            <div class="client-logo-item">
+                <img src="{% static 'client_logo/Sports_Authority_of_India_logo.svg.png' %}" alt="Client 1" class="client-logo">
+            
+            </div>
+            <!-- Client Logo 2 -->
+            <div class="client-logo-item">
+                <img src="{% static 'client_logo/img1.png' %}" alt="Client 2" class="client-logo">
+            
+            </div>
+            <!-- Client Logo 3 -->
+            <div class="client-logo-item">
+                <img src="{% static 'client_logo/cidcologo.jpg' %}" alt="Client 3" class="client-logo">
+            
+            </div>
+            <!-- Client Logo 4 -->
+            <div class="client-logo-item">
+                <img src="{% static 'client_logo/government.jpg' %}" alt="Client 4" class="client-logo">
+            
+            </div>
+            <!-- Client Logo 5 -->
+            <div class="client-logo-item">
+                <img src="{% static 'client_logo/Hindustan_Petroleum_Logo.svg.png' %}" alt="Client 5" class="client-logo">
+            
+            </div>
+             <!-- Client Logo 1 -->
+             <div class="client-logo-item">
+                <img src="{% static 'client_logo/navi_mumbai.png' %}" alt="Client 1" class="client-logo">   
+            </div>
+        
+            <!-- Client Logo 3 -->
+            <div class="client-logo-item">
+                <img src="{% static 'client_logo/lkn.png' %}" alt="Client 3" class="client-logo">
+            
+            </div>
+            <!-- Client Logo 4 -->
+            <div class="client-logo-item">
+                <img src="{% static 'client_logo/img1.png' %}" alt="Client 4" class="client-logo">
+                
+            </div>
+            <!-- Client Logo 5 -->
+            <div class="client-logo-item">
+                <img src="{% static 'client_logo/mhada_logo.jpg' %}" alt="Client 5" class="client-logo">
+            
+            </div>
+            <!-- Client Logo 1 -->
+            <div class="client-logo-item">
+                <img src="{% static 'client_logo/Sports_Authority_of_India_logo.svg.png' %}" alt="Client 1" class="client-logo">
+            
+            </div>
+            <!-- Client Logo 2 -->
+            <div class="client-logo-item">
+                <img src="{% static 'client_logo/img1.png' %}" alt="Client 2" class="client-logo">
+            
+            </div>
+            <!-- Client Logo 3 -->
+            <div class="client-logo-item">
+                <img src="{% static 'client_logo/cidcologo.jpg' %}" alt="Client 3" class="client-logo">
+            
+            </div>
+            <!-- Client Logo 4 -->
+            <div class="client-logo-item">
+                <img src="{% static 'client_logo/government.jpg' %}" alt="Client 4" class="client-logo">
+            
+            </div>
+            <!-- Client Logo 5 -->
+            <div class="client-logo-item">
+                <img src="{% static 'client_logo/Hindustan_Petroleum_Logo.svg.png' %}" alt="Client 5" class="client-logo">
+            
             </div>
         </div>
     </section>
@@ -856,6 +981,45 @@
             </div>
             </div>
         </div>
+        <div class='carousel__item'>
+            <div class='carousel__item-head'>
+                <div class="feedback-image">
+                    <img src="{% static 'client_logo/mvst.png' %}" alt="Feedback 3">
+                </div>
+            </div>
+            <div class='carousel__item-body'>
+                <h3 class="feedback-name">Dr. Ramnath Subramaniam</h3>
+                    <p class="feedback-post">CEO MVSTF Govt. of Maharashtra</p>
+                    <p class="feedback-description">"We appreciate your Services and Deliveries."</p>
+            <div class="feedback-stars">
+                <span class="star">★</span>
+                <span class="star">★</span>
+                <span class="star">★</span>
+                <span class="star">★</span>
+                <span class="star">☆</span>
+            </div>
+            </div>
+        </div>
+        <div class='carousel__item'>
+            <div class='carousel__item-head'>
+                <div class="feedback-image">
+                    <img src="{% static 'client_logo/lkn.png' %}" alt="Feedback 2">
+                </div>
+            </div>
+            <div class='carousel__item-body'>
+                <h3 class="feedback-name">Mr. Hemant Nakashe</h3>
+                <p class="feedback-post">Director LKN Consultants</p>
+                <p class="feedback-description">"Impressed with their work with Salay Register, we awarded Audit Software which again brought excellent result"</p>
+            <div class="feedback-stars">
+                <span class="star">★</span>
+                <span class="star">★</span>
+                <span class="star">★</span>
+                <span class="star">★</span>
+                <span class="star">☆</span>
+            </div>
+            </div>
+        </div>
+        
     </section>
 
     <section id="technoWinContactSection">
