--- a/static/css/main_style.css
+++ b/static/css/main_style.css
@@ -3436,6 +3436,13 @@ footer {
     justify-content: center;
     align-items: center;
 }
+/* Mobile view (for screens up to 768px wide) */
+@media screen and (max-width: 768px) {
+    .slider-video-section {
+        height: 300px; /* Adjusted height for mobile */
+    }
+}
+
 
 .auto-video {
     width: 150%;
@@ -3451,7 +3458,8 @@ footer {
 
     .auto-video {
        
-        width: 350px;
+         /* width: 350px; */
+        width: 400px;
     }
 }
 
